--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            Song
+            Shape Of You
         </title>
         <link rel="stylesheet" href="css/styles.css"/>
         <!--Google fonts-->
